# skeletonide

./: CMakeLists.txt  README.md  spook.cpp
src/: pipeline.cpp
